
- Martin 2007-10-13
  - Now pgm3 shows other logfiles (like from wired devices) too. Changes in index.php, config.php, gnuplot.php, new userdefs.php)
- Martin 2007-10-14
 -  User defined logs with several values in one file now supported. Changes in index.php, gnuplot.php, userdefs.php and config.php.

- Martin 2007-10-16
 - User defined graphics now for Piri an FS20 too

- Martin 2007-10-18
 - User defined graphics for FS20 improved ("full" picture)

- Martin 2007-10-23
 - every module now checks if a redraw of the picture is really necessary. If not the old picture will be sent. The time to reload the screen now is down to less than 50 percent.

- Martin 2007-10-24
 - Change in userdefs.php. At least one new picture per hour for userdefs (gnuplot picture)

- Martin 2007-10-25
 - design: userdef-gnuplot with transparent background (userdef.php)

- Martin 2007-10-30
 -  fix: gnuplot for FS20 now only off or on

- Martin 2007-11-30
 -  feature: RSS-Feeds added. New include/rssfeeds.php. Changes in index.php and config.php

- Martin 2007-12-03
 -- minor bugfix: rebuild picture of fht on every entry in the log (not only on change of measured-temp. Changes in fht.php
 -- logrotate: better warning if there are wrong rights for the pgm3-logrotate

- Martin 2007-12-08
 -- bugfix: Wrong display in MS IE. (Reported and solved by Boris)
 -- Feature: Drewpoint im HMS100TF (Boris)
 -- Feature: RSS-Feeds now new arranged

- Martin 2007-12-21
 -- Feature: HMS-CO supported (Peter A.)
 -- Feature: Webcams or local pictures added
 -- Feature: ks300 mit Drewpoint (Boris)

- Martin 2007-12-24
 -- Bugfix: Userdef-Gnuplot with type temperature now with y1tics
 -- Feature: Webcam/Pics hideable

- Martin 2008-03-24
 -- Bugfix: FHT-View with the current CVS-FHEM was broken

- Martin 2008-03-25
 -- Bugfix: KS300-Log now possible with Full Log like define kslog FileLog /var/tmp/ks300.log ks300:.*